# ect-mnist

./: README.md  hello.py  pyproject.toml
app/: digit_recognition_app.py  mnist_model.py
data/training_output/cnn_20241211_105122_point_cloud_training/: training_metrics.json
data/training_output/cnn_20241211_110237_mapper/: training_metrics.json
data/training_output/cnn_20241211_192515_point_cloud/: training_metrics.json
data/training_output/cnn_20241212_010618_mapper/: training_metrics.json
scripts/: cnn_training.py  complex_processing.py  complex_processing_mapper.py  mnist_loader.py
tests/: test_complex_construction.py  test_loader.py
